# mm

./: .gitmodules  CMakeLists.txt  Makefile  README.md  host.yaml  mod.toml
minipelago/: CMakeLists.txt  import.h  main.cpp  utils.cpp  utils.h
scripts/: DummyModuleUpdate.py  MMGenerate.py  package_mod.py  worlds_init.py
src/: main.c
